# AHEUI-interpreter

./: .gitignore  Cargo.toml
.github/workflows/: aheui_core_CI.yml  nextjs.yml
aheui_core/: Cargo.toml
aheui_core/src/: brake_pointer.rs  break_pointer.rs  cell.rs  debugger.rs  input_receiver.rs  lib.rs  main.rs  processor.rs  storage.rs
aheui_core/tests/: example.rs  example_test.rs  run.rs  unit.rs
aheui_core/tests/auto_test_cases/: bieup-char.in  bieup.in
aheui_core/tests/example/: factorization.aheui  factorization.in  factorization.out  ssangsiot.out
aheui_core/tests/speed_test_cases/: add1ToN.aheui  factorization.out
aheui_ide/: next.config.mjs  package.json  pnpm-lock.yaml
aheui_ide/public/aheui-core-wasm/: aheui_interpreter.d.ts  aheui_interpreter.js  aheui_interpreter_bg.wasm  aheui_interpreter_bg.wasm.d.ts
aheui_ide/public/rust/: aheui_interpreter.d.ts  package.json
aheui_ide/src/app/: globals.css  layout.tsx  page.tsx
aheui_ide/src/app/components/: Bottom.tsx  Controller.tsx  Input.tsx  Menu.tsx  Output.tsx  RecoilWrapper.tsx  ResultArea.tsx  StatusBar.tsx  Storage.tsx
aheui_ide/src/app/hook/: useAheuiCore.ts  useEditor.ts
aheui_ide/src/app/lib/: example.ts
aheui_interpreter/: package.json
aheui_interpreter/hooks/: rust.ts
aheui_interpreter/src/app/: layout.tsx  page.tsx
aheui_interpreter/src/app/components/: Controller.tsx  ResultArea.tsx  StatusBar.tsx
aheui_interpreter/src/app/hook/: editor.ts  rust.ts
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  processor.rs  storage.rs
src/: lib.rs  main.rs  storage.rs
(+19 files in other folders)
