[package]
name = "aheui_interpreter"
description = "aheui-interpreter"
authors = ["iubns <iubns@naver.com>"]
version = "0.1.3"
edition = "2021"
repository = "https://github.com/iubns/AHEUI-interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
